tests/data/good/list.py
from __future__ import annotations

from ntc import CN

from .good import cfg

cfg = CN(cfg)
cfg.LIST = [3, 2, 1]
