tests/data/bad/bad.py
from ntc import CN

from ..good.good import cfg

cfg = CN(cfg)
cfg.NAME = 1
